# large-file-finder

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cache_paths.rs  main.rs  tui.rs
