[package]
name = "large-file-finder"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "lff"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
humansize = "2.1.3"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
walkdir = "2.5.0"
